--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "redux-undo-redo",
+  "name": "redux-undo-middleware",
   "version": "1.1.4",
   "description": "enables undo-redo by defining opposite actions",
   "main": "lib/index.js",
