--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "redux-undo-middleware",
+  "name": "redux-undo-redo-middleware",
   "version": "1.1.4",
   "description": "enables undo-redo by defining opposite actions",
   "main": "lib/index.js",
@@ -37,6 +37,5 @@
     "redux-mock-store": "^1.2.1",
     "rimraf": "^2.5.4"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
