--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-undo-redo-middleware",
-  "version": "1.1.5",
+  "version": "1.2.0",
   "description": "enables undo-redo by defining opposite actions",
   "main": "lib/index.js",
   "scripts": {
@@ -9,7 +9,7 @@
     "build:watch": "npm run build -- --watch",
     "test": "mocha --compilers js:babel-register --require ./testSetup.js",
     "test:watch": "npm run test -- --watch",
-    "publish": "npm run clean && npm run build"
+    "prepublish": "npm run clean && npm run build"
   },
   "repository": {
     "type": "git",
